@@ -10,6 +10,7 @@ import com.eps.portal.repository.PacienteRepository;
 import com.eps.portal.repository.UsuarioRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -20,15 +21,12 @@ public class PacienteService {
     private final FormulaMedicaRepository formulaMedicaRepository;
 
     public PacienteResponse obtenerPerfilPorEmail(String email) {
-        // 1. Buscamos al usuario base
         Usuario usuario = usuarioRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("Usuario no encontrado en el sistema"));
 
-        // 2. Buscamos sus datos clínicos/personales
         Paciente paciente = pacienteRepository.findById(usuario.getId())
                 .orElseThrow(() -> new RuntimeException("Perfil de paciente no encontrado"));
 
-        // 3. Mapeamos a la respuesta segura (sin passwords)
         return PacienteResponse.builder()
                 .id(paciente.getUsuarioId())
                 .email(usuario.getEmail())
@@ -70,13 +68,13 @@ public class PacienteService {
         return formulaMedicaRepository.findByHistorialClinicoPacienteUsuarioEmailOrderByHistorialClinicoFechaRegistroDesc(email)
                 .stream()
                 .map(formula -> MedicamentoRecetadoResponse.builder()
-                        .medicamentoNombre(formula.getMedicamento().getNombre())
+                        .medicamentoNombre(formula.getMedicamento().getNombreGenerico())
                         .dosis(formula.getDosis())
                         .frecuencia(formula.getFrecuencia())
                         .duracionDias(formula.getDuracionDias())
                         .medicoNombre("Dr. " + formula.getHistorialClinico().getMedico().getNombres() + " " + formula.getHistorialClinico().getMedico().getApellidos())
                         .fechaReceta(formula.getHistorialClinico().getFechaRegistro())
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 }
